--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>com.shop</groupId>
 		<artifactId>shop</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>payment-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>payment-service</name>
 	<description>Payment Service</description>
 	<properties>
